--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -8,3 +8,5 @@ validation.Size.max={max}\u6587\u5b57\u4ee5\u5185\u3067\u5165\u529b\u3057\u3066\
 validation.MultiLine=\u5404\u884c\u306f{min}\u301c{max}\u6587\u5b57\u3067\u5165\u529b\u3057\u3066\u304f\u3060\u3055\u3044
 # @ChoicesCount
 validation.ChoicesCount=\u9078\u629e\u80a2\u306f\uff11\u3064\u4ee5\u4e0a\u8a2d\u5b9a\u3057\u3066\u304f\u3060\u3055\u3044
+# @NotEmpty
+org.hibernate.validator.constraints.NotEmpty.message=\u5fc5\u9808\u5165\u529b\u3067\u3059
